--- a/test/fixtures/bx_resource_nodes.yml
+++ b/test/fixtures/bx_resource_nodes.yml
@@ -1,4 +1,4 @@
-#   1: locals:
+#   1: locales:
 #   3:   label:
 #   5:     resources: "リソース"
 #   6:     new_resource: "新しいリソース"
@@ -20,6 +20,7 @@ bx_resource_node_001:
   category_id: 1
   code: locales
   summary: locale settings
+  path: locales
 bx_resource_node_002:
   id: 2
   created_at: 2013-07-21 00:00:00
@@ -30,6 +31,7 @@ bx_resource_node_002:
   category_id: 2
   code: db
   summary: databse settings
+  path: db
 bx_resource_node_003:
   id: 3
   created_at: 2013-07-21 00:00:00
@@ -39,6 +41,7 @@ bx_resource_node_003:
   project_id: 1
   category_id: 1
   code: label
+  path: locales:label
 bx_resource_node_004:
   id: 4
   created_at: 2013-07-21 00:00:00
@@ -49,6 +52,7 @@ bx_resource_node_004:
   category_id: 3
   code: locales
   summary: locale settings
+  path: locales
 bx_resource_node_005:
   id: 5
   created_at: 2013-07-21 00:00:00
@@ -59,6 +63,7 @@ bx_resource_node_005:
   category_id: 1
   code: resources
   summary: リソースラベル
+  path: locales:label:resources
 bx_resource_node_006:
   id: 6
   created_at: 2013-07-21 00:00:00
@@ -69,6 +74,7 @@ bx_resource_node_006:
   category_id: 1
   code: new_resource
   summary: リソース新規作成ラベル
+  path: locales:label:new_resource
 bx_resource_node_007:
   id: 7
   created_at: 2013-07-21 00:00:00
@@ -79,6 +85,7 @@ bx_resource_node_007:
   category_id: 1
   code: relational_issues
   summary: 関連チケットラベル
+  path: locales:label:relational_issues
 bx_resource_node_008:
   id: 8
   created_at: 2013-07-21 00:00:00
@@ -88,6 +95,7 @@ bx_resource_node_008:
   project_id: 1
   category_id: 1
   code: activemodel
+  path: activemodel
 bx_resource_node_009:
   id: 9
   created_at: 2013-07-21 00:00:00
@@ -97,6 +105,7 @@ bx_resource_node_009:
   project_id: 1
   category_id: 1
   code: attributes
+  path: activemodel:attributes
 bx_resource_node_010:
   id: 10
   created_at: 2013-07-21 00:00:00
@@ -106,6 +115,7 @@ bx_resource_node_010:
   project_id: 1
   category_id: 1
   code: bx_root_resource_form
+  path: activemodel:attributes:bx_root_resource_form
 bx_resource_node_011:
   id: 11
   created_at: 2013-07-21 00:00:00
@@ -116,6 +126,7 @@ bx_resource_node_011:
   category_id: 1
   code: resource_summary
   summary: ルートリソースフォーム：サマリ
+  path: activemodel:attributes:bx_root_resource_form:resource_summary
 bx_resource_node_012:
   id: 12
   created_at: 2013-07-21 00:00:00
@@ -126,4 +137,5 @@ bx_resource_node_012:
   category_id: 1
   code: resource_code
   summary: ルートリソースフォーム：コード
+  path: activemodel:attributes:bx_root_resource_form:resource_code
 
