--- a/test/fixtures/bx_resource_values.yml
+++ b/test/fixtures/bx_resource_values.yml
@@ -81,3 +81,35 @@ bx_resource_value_010:
   node_id: 12
   value: Code
 
+bx_resource_value_011:
+  id: 11
+  created_at: 2013-07-21 00:00:00
+  updated_at: 2013-07-21 00:00:00
+  lock_version: 0
+  branch_id: 1
+  node_id: 14
+  value: カテゴリ名
+bx_resource_value_012:
+  id: 12
+  created_at: 2013-07-21 00:00:00
+  updated_at: 2013-07-21 00:00:00
+  lock_version: 0
+  branch_id: 1
+  node_id: 15
+  value: 説明
+bx_resource_value_013:
+  id: 13
+  created_at: 2013-07-21 00:00:00
+  updated_at: 2013-07-21 00:00:00
+  lock_version: 0
+  branch_id: 2
+  node_id: 14
+  value: Category name
+bx_resource_value_014:
+  id: 14
+  created_at: 2013-07-21 00:00:00
+  updated_at: 2013-07-21 00:00:00
+  lock_version: 0
+  branch_id: 2
+  node_id: 15
+  value: Description
