--- a/test/fixtures/bx_resource_branches.yml
+++ b/test/fixtures/bx_resource_branches.yml
@@ -1,18 +1,17 @@
 ---
-bx_resource_branch_001:
+bx_resource_branches_001:
   id: 1
-  created_at: 2013-07-21 00:00:00
-  updated_at: 2013-07-21 00:00:00
   lock_version: 0
+  created_at: 2013-11-14 13:07:46.450725000 +09:00
+  updated_at: 2013-11-14 13:07:46.450725000 +09:00
   category_id: 1
   name: Japanese
   code: ja
-bx_resource_branch_002:
+bx_resource_branches_002:
   id: 2
-  created_at: 2013-07-21 00:00:00
-  updated_at: 2013-07-21 00:00:00
   lock_version: 0
+  created_at: 2013-11-14 13:07:54.810232000 +09:00
+  updated_at: 2013-11-14 13:07:54.810232000 +09:00
   category_id: 1
   name: English
   code: en
-
