--- a/test/fixtures/bx_resource_categories.yml
+++ b/test/fixtures/bx_resource_categories.yml
@@ -1,26 +1,25 @@
 ---
-bx_resource_category_001:
+bx_resource_categories_001:
   id: 1
-  created_at: 2013-07-21 00:00:00
-  updated_at: 2013-07-21 00:00:00
   lock_version: 0
+  created_at: 2013-11-14 13:04:27.787144000 +09:00
+  updated_at: 2013-11-14 13:04:27.787144000 +09:00
   project_id: 1
   name: locales
   description: locale settings
-bx_resource_category_002:
+bx_resource_categories_002:
   id: 2
-  created_at: 2013-07-21 00:00:00
-  updated_at: 2013-07-21 00:00:00
   lock_version: 0
+  created_at: 2013-11-14 13:05:19.494651000 +09:00
+  updated_at: 2013-11-14 13:05:19.494651000 +09:00
   project_id: 1
-  name: mail settings
-  description: system mailer settings
-bx_resource_category_003:
+  name: settings
+  description: system settings
+bx_resource_categories_003:
   id: 3
-  created_at: 2013-07-21 00:00:00
-  updated_at: 2013-07-21 00:00:00
   lock_version: 0
+  created_at: 2013-11-14 13:07:11.716308000 +09:00
+  updated_at: 2013-11-14 13:07:11.716308000 +09:00
   project_id: 2
   name: locales
   description: locale settings
-
