--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: ruby
 rvm:
   - 1.9.3
-  - 2.0.0
-  - 2.1.0
+  - 2.0
+  - 2.1.2
+env:
+  - TARGET=redmine REDMINE_VERSION=2.3.4
+  - TARGET=plugin  REDMINE_VERSION=2.3.4
+  - TARGET=redmine REDMINE_VERSION=2.4.5
+  - TARGET=plugin  REDMINE_VERSION=2.4.5
+  - TARGET=redmine REDMINE_VERSION=2.5.1
+  - TARGET=plugin  REDMINE_VERSION=2.5.1
 before_install: sh travis/before_install.sh
 script: sh travis/exec_test.sh
 
